--- a/style.css
+++ b/style.css
@@ -5,47 +5,52 @@
 
 /* Inicio CSS del index */
 /*Inicio Header*/
-header {
-    background-color:#304059 ;
-    
-}
-nav  ul li  a {
-    color: #f4d3a6;
-    font-size: 16px;
-    font-family: 'Lato', sans-serif;
-    text-decoration: none;
-}
-nav img {
-    width: 10%;
-    height: 10%;
-}
-nav {
-    border-style:solid ;
-    border-width: 5px ;
-    border-color: #d2b48c;
-}
+
+
 /*fin Header*/
 
 /*inicio body*/
 .introduccion {
-     width: 100%;
+     margin: top 5% bottom 5% ;
+     width: 50%;
      text-align: center; 
-     align-items: center; 
-     font-size: 20px;
+     font-size: 17px;
      font-family: 'Barlow Condensed', sans-serif;
+     display: flex;
+     justify-content: center;
 
 }
+.img-index {
+    width: 660px;
+    height: 500%;
+    text-align: center;
+}
 
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 3%;
+    align-items: stretch;
+    
+}
 .moneda {
      margin-top: 3%;
      margin-bottom: 3%;
+     margin-left: 6%;
      width: 100%;
      text-align: center; 
      align-items: center;
      font-size: 20px;
      font-family: 'Barlow Condensed', sans-serif;
+     border: 1px solid #ccc; 
+     padding: 10%;
+    
 }
-
+.moneda-index {
+    width: 300px;
+    height: 300px;
+  
+}
 .basilica {
      margin-top: 3%;
      margin-bottom: 3%;
@@ -54,6 +59,13 @@ nav {
      align-items: center;
      font-size: 20px;
      font-family: 'Barlow Condensed', sans-serif;
+     border: 1px solid #ccc;  
+}
+
+.basilica-index {
+    height:300px ;
+    width: 300px;
+    border-radius: 5px;
 }
 
 .vaticano {
@@ -62,8 +74,15 @@ nav {
     width: 100%;
     text-align: center; 
     align-items: center;
-    font-size: 20px;
+    font-size: 15,7px;
     font-family: 'Barlow Condensed', sans-serif;
+    /* border: 1px solid #ccc; */
+    padding-right: 10%;
+}
+.vaticano-index {
+    height:300px ;
+    width: 300px;
+    border-radius: 5px;
 }
 /*fin body*/
 
