--- a/style.css
+++ b/style.css
@@ -5,25 +5,33 @@
 
 /* Inicio CSS del index */
 /*Inicio Header*/
-
+.Foto-header {
+    width: 25px;
+    height: 20px;
+}
 
 /*fin Header*/
 
 /*inicio body*/
 .introduccion {
-     margin: top 5% bottom 5% ;
-     width: 50%;
      text-align: center; 
      font-size: 17px;
      font-family: 'Barlow Condensed', sans-serif;
      display: flex;
-     justify-content: center;
+     
+
 
 }
 .img-index {
-    width: 660px;
-    height: 500%;
-    text-align: center;
+   text-align: center;
+   display: block;
+   margin-left: auto;
+   margin-right: auto;
+  width: 1000px;
+  height: 500px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+   
 }
 
 .grid-container {
@@ -31,24 +39,23 @@
     grid-template-columns: repeat(3, 1fr);
     gap: 3%;
     align-items: stretch;
+ 
+    
     
 }
 .moneda {
-     margin-top: 3%;
-     margin-bottom: 3%;
-     margin-left: 6%;
-     width: 100%;
-     text-align: center; 
-     align-items: center;
-     font-size: 20px;
-     font-family: 'Barlow Condensed', sans-serif;
-     border: 1px solid #ccc; 
-     padding: 10%;
+    margin-top: 3%;
+    margin-bottom: 3%;
+    width: 100%;
+    text-align: center; 
+    align-items: center;
+    font-size: 25px;
+    font-family: 'Barlow Condensed', sans-serif;
     
 }
 .moneda-index {
-    width: 300px;
-    height: 300px;
+    width: 200px;
+    height: 200px;
   
 }
 .basilica {
@@ -59,7 +66,7 @@
      align-items: center;
      font-size: 20px;
      font-family: 'Barlow Condensed', sans-serif;
-     border: 1px solid #ccc;  
+     /* border: 1px solid #ccc;   */
 }
 
 .basilica-index {
@@ -117,12 +124,20 @@ footer{
 .geografia {
     font-size:20px ;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    display: flex;
+    justify-content: left;
+    text-align: justify;
+    
+   
     
 }
 .paisajes{
-    width: 23%;
-    height: 20%;
+    width: 200px;
+    height: 200px;
     border:solid skyblue;
+    display: flex;
+    justify-content: space-around;
+    margin: 5px;
 }
 /* fin introduccion */
 /* incio section rio po */
